File repository and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ logging.file.max-size=50MB
 # Context
 server.servlet.context-path=/api/v1
 
+filesystem.basepath = /Users/lucasgauk/Documents/422Filesystem/
+
