Added a few things.

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<version>RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+			<version>3.0.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
