Added permissions. Not checked yet. Files logged in database. Permissions will be checked against files when loading. Database will only save file information.

--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,8 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.thymeleaf.extras</groupId>
-			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
-			<version>3.0.1.RELEASE</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	</dependencies>
 
