--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
 spring.datasource.username=root
 spring.datasource.password=spartan
 filesystem.basepath = C:\\Users\\lucas\\Documents\\ECE422Filesystem\\
+spring.security.user.name=lucas
+spring.security.user.password=spartan
