File upload kind of working. Adds new file and permission into the database for user authenticating as well.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/security_api
 spring.datasource.username=root
 spring.datasource.password=
 # Log configuration #
-logging.file=./reporting-api.log
+logging.file=./security-api.log
 logging.file.max-history=10
 logging.file.max-size=50MB
 # Context
