--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework.web=INFO
 logging.level.co.mtnos=INFO
 logging.level.=INFO
 # DATASOURCE #
-spring.datasource.url=jdbc:mariadb://localhost:3306/security_api
+spring.datasource.url=jdbc:mariadb://localhost:3306/securityapi
 spring.datasource.username=root
 spring.datasource.password=
 # Log configuration #
