--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
 spring.datasource.username=root
-spring.datasource.password=spartan
-filesystem.basepath = C:\\Users\\lucas\\Documents\\ECE422Filesystem\\
+spring.datasource.password=
+filesystem.basepath = /Users/lucasgauk/Documents/422FileSystem/
